@@ -1,3 +1,10 @@
+2004-12-24  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* Makefile:
+	* README:
+	* build.xml:
+	  updates for public release
+
 === release 0.0.1 ===
 
 2004-11-30  Thomas Vander Stichele  <thomas at apestaart dot org>
